// Code generated by kds. DO NOT EDIT.

syntax = "proto3";

package kdspb;

option go_package="github.com/iakud/kds/kdspb";

message FieldMask {
	int32 Number = 1;
	MapMask MapMask = 2;
	repeated FieldMask FieldMasks = 10;
}

message Int32Array {
	repeated int32 Values = 1;
}

message Int64Array {
	repeated int64 Values = 1;
}

message UInt32Array {
	repeated uint32 Values = 1;
}

message Uint64Array {
	repeated uint64 Values = 1;
}

message BoolArray {
	repeated bool Values = 1;
}

message StringArray {
	repeated string Values = 1;
}

message MapMask {
	bool Clear = 1;
	oneof DeleteKeys {
		Int32Array Int32DeleteKeys = 2;
		Int64Array Int64DeleteKeys = 3;
		UInt32Array Uint32DeleteKeys = 4;
		Uint64Array Uint64DeleteKeys = 5;
		BoolArray BoolDeleteKeys = 6;
		StringArray StringDeleteKeys = 7;
	}
}